batch-mode/ai-json-template-derive/tests/trybuild_justification/fail_multiple_unsupported_types.stderr
error[E0277]: the trait bound `i64: ai_json_template::AiJsonTemplate` is not satisfied
  --> tests/trybuild/fail_multiple_unsupported_types.rs:21:15
   |
21 |     quantity: i64,
   |               ^^^ the trait `ai_json_template::AiJsonTemplate` is not implemented for `i64`
   |
   = help: the trait `ai_json_template::AiJsonTemplate` is implemented for `FailMultipleUnsupportedTypes`

error[E0277]: the trait bound `f32: ai_json_template::AiJsonTemplate` is not satisfied
  --> tests/trybuild/fail_multiple_unsupported_types.rs:24:12
   |
24 |     ratio: f32,
   |            ^^^ the trait `ai_json_template::AiJsonTemplate` is not implemented for `f32`
   |
   = help: the trait `ai_json_template::AiJsonTemplate` is implemented for `FailMultipleUnsupportedTypes`

error[E0277]: the trait bound `usize: ai_json_template::AiJsonTemplate` is not satisfied
  --> tests/trybuild/fail_multiple_unsupported_types.rs:27:12
   |
27 |     count: usize,
   |            ^^^^^ the trait `ai_json_template::AiJsonTemplate` is not implemented for `usize`
   |
   = help: the trait `ai_json_template::AiJsonTemplate` is implemented for `FailMultipleUnsupportedTypes`
